--- a/css/styles.css
+++ b/css/styles.css
@@ -46,6 +46,35 @@
  display: flex;
 }
 
+.seccion-completa {
+    display: flex; 
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.subseccion1 {
+    display: flex; 
+    flex-flow: column wrap;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.subseccion2 {
+    display: flex;
+    flex-flow: column wrap;
+    justify-content: space-evenly;
+    align-items: center;
+    padding-top: 40px;
+}
+
+.subseccion3 {
+    display: flex;
+    flex-flow: column;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
 .graphs-intro {
     display: flex;
     justify-content: center;
@@ -84,9 +113,9 @@
     display: flex;
     flex-flow: column wrap;
     justify-content: space-around;
-    gap: 10px;
-    margin-bottom: 30px;
     align-items: center;
+    gap: 10px;
+    margin-bottom: 30px;    
 }
 
 #titulo-principal {
@@ -118,7 +147,17 @@
     margin-bottom: 40px;
 }
 
-.numeros {
+.titulos-triseccion {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    width: 100%;
+    padding: 0px 5px;
+    gap: 10px;
+}
+
+.numero-triseccion1::before {
+    content: "01";
     display: flex;
     justify-content: center;
     align-items: center;
@@ -130,18 +169,36 @@
     background-color: #F3603B;
 }
 
-.titulos-triseccion {
+.numero-triseccion2::before {
+    content: "02";
     display: flex;
-    justify-content: flex-start;
+    justify-content: center;
     align-items: center;
-    width: 100%;
-    padding: 0px 5px;
-    gap: 10px;
+    padding: 10px 20px;
+    border-radius: 30px;
+    font-family: 'Be Vietnam Pro', sans-serif;
+    font-weight: 700;
+    color: #FFFFFF;
+    background-color: #F3603B;
+}
+
+.numero-triseccion3::before {
+    content: "03";
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 10px 20px;
+    border-radius: 30px;
+    font-family: 'Be Vietnam Pro', sans-serif;
+    font-weight: 700;
+    color: #FFFFFF;
+    background-color: #F3603B;
 }
 
 .grupo-triseccion {
     display: flex;
-    flex-flow: column wrap;
+    flex-direction: column;
+    justify-content: flex-start;
 }
 
 #parrafo-triseccion {
@@ -199,9 +256,9 @@
 .footer-top {
     display: flex;
     flex-flow: row wrap;
-    justify-content: center;
+    justify-content: space-around;
     align-content: center;
-    height: 340px;
+    height: 45vh;
     background-image: url('../img/bg-simplify-section-mobile.svg');
     background-repeat: no-repeat;
     background-size: contain;
@@ -283,6 +340,10 @@
 /*media queries*/
 
 @media (min-width: 376px) and (max-width: 1440px) {
+    .hamburguer {
+        display: none;
+    }
+
     .barra-navegacion-pc {
         display: flex;
         gap: 10px;
@@ -292,7 +353,51 @@
         display: flex;
     }
 
-    .hamburguer {
-        display: none;
+    .seccion-principal {
+        width: 350px;
+        align-items: flex-start;
+        gap: 2px;
+    }
+
+    .subseccion1 {
+        flex-flow: row-reverse;
+    }
+
+    #titulo-principal h1, #parrafo-principal p {
+        text-align: left;
+    }
+
+    .graphs-intro {
+        width: 40vw;
+    }
+
+    .subseccion2 {
+        display: flex;
+        flex-flow: row;
+        justify-content: space-around;
+        align-items: flex-start;
+        gap: 100px;
+    }
+
+    .seccion-different h2, .seccion-different p {
+        text-align: left;
+        width: 350px;   
+    }
+
+    .grupo-triseccion {
+        width: 560px;
+    }
+
+    .titulos-triseccion {
+        position: relative;
+        right: 55px;
+    }
+
+    .perfiles {
+        background-color: #FAFAFA;
+    }
+
+    .footer-top {
+        height: 28vh;
     }
 }
