--- a/css/styles.css
+++ b/css/styles.css
@@ -58,6 +58,7 @@
     flex-flow: column wrap;
     justify-content: space-evenly;
     align-items: center;
+    width: 100%;
 }
 
 .subseccion2 {
@@ -361,6 +362,7 @@
 
     .subseccion1 {
         flex-flow: row-reverse;
+        justify-content: space-evenly;
     }
 
     #titulo-principal h1, #parrafo-principal p {
@@ -373,8 +375,8 @@
 
     .subseccion2 {
         display: flex;
-        flex-flow: row;
-        justify-content: space-around;
+        flex-flow: row wrap;
+        justify-content: space-evenly;
         align-items: flex-start;
         gap: 100px;
     }
