--- a/css/styles.css
+++ b/css/styles.css
@@ -155,6 +155,8 @@
     width: 100%;
     padding: 0px 5px;
     gap: 10px;
+    background-color: rgba(243, 107, 72, 0.15);
+    border-radius: 50px;
 }
 
 .numero-triseccion1::before {
@@ -260,10 +262,10 @@
     justify-content: space-around;
     align-content: center;
     height: 45vh;
+    background-color: #F3613C;
     background-image: url('../img/bg-simplify-section-mobile.svg');
     background-repeat: no-repeat;
     background-size: contain;
-    background-color: #F3613C;
 }
 
 #texto-footer-top {
@@ -282,12 +284,16 @@
 
 .footer-bottom {
     display: flex;
-    flex-flow: column wrap;
+    flex-flow: column;
     justify-content: space-evenly;
     align-items: center;
     gap: 40px;
     background-color: #1E1E26;
     font-family: 'Be Vietnam Pro', sans-serif;
+}
+
+.form {
+    display: flex;
 }
 
 .form-footer {
@@ -321,6 +327,15 @@
     color: #F3603C;
 }
 
+.grupo-iconos-logo {
+    display: flex;
+    flex-flow: column wrap;
+    justify-content: space-between;
+    align-items: center;
+    height: 110px;
+    width: 100%;
+}
+
 .iconos {
     display: flex;
     justify-content: space-evenly;
@@ -336,6 +351,10 @@
     font-family: 'Be Vietnam Pro', sans-serif;
     font-size: 12px;
     color: #8C8C94;
+}
+
+.form-derechos-pc {
+    display: none;
 }
 
 /*media queries*/
@@ -393,6 +412,7 @@
     .titulos-triseccion {
         position: relative;
         right: 55px;
+        background-color: transparent;
     }
 
     .perfiles {
@@ -401,5 +421,46 @@
 
     .footer-top {
         height: 28vh;
+        background-image: url('../img/bg-simplify-section-desktop.svg');
+        background-repeat: repeat;
+        background-size: cover;
+    }
+
+    .footer-bottom {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-evenly;
+        align-items: center;
+        height: 28vh;
+    }
+
+    .grupo-iconos-logo {
+        flex-direction: column-reverse;
+        order: -500;
+    }
+
+    .iconos {
+        justify-content: center;
+        gap: 14px;
+    }
+
+    .listas-footer {
+        flex-direction: row;
+        justify-content: space-evenly;
+        width: 100%;
+        order: -400;
+    }
+
+    .form-derechos-mobile {
+        display: none;
+    }
+
+    .form-derechos-pc {
+        display: flex;
+        flex-flow: column;
+        justify-content: space-between;
+        align-items: flex-end;
+        padding-right: 30px;
+        gap: 20px;
     }
 }
